--- a/tools/tex/sample.tex
+++ b/tools/tex/sample.tex
@@ -95,9 +95,9 @@ section/format += \sffamily\raggedright,
 
 单\quad 位：	武汉大学计算机学院
 
-责任人：	胡继承
+编著人：	胡继承
 
-手\quad 机：	13871110050
+时\quad 间：	September 9, 2021
 
 \end{titlepage}
 
@@ -110,10 +110,13 @@ section/format += \sffamily\raggedright,
 
 %-----------------------------------  中英摘要  -------------------------------------
 
-%\chapter[中文摘要]{摘要}
+\chapter[中文摘要]{摘要}
 
-%\chapter[英文摘要]{Abstract}
+理论及应用
 
+\chapter[英文摘要]{Abstract}
+
+There has been ...
 
 %------------------------------------   目录  ------------------------------------
 
